modified to worj with data in git

--- a/model/recc.ipynb
+++ b/model/recc.ipynb
@@ -2,70 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "songs = pd.read_csv('data/songs.csv')\n",
-    "user = pd.read_csv('data/user.csv')"
+    "songs = pd.read_excel('../data/songs_short.xlsx')\n",
+    "user = pd.read_excel('../data/user.xlsx')\n",
+    "history = pd.read_excel('../data/listening history.xlsx')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               spotify_id                                               Song  \\\n",
-      "0  7n92QzQomRCLlciO14X0kd  Nocturne en mi bÃ©mol majeur opus 9 nÂ°2: Ball...   \n",
-      "1  6GzMz3s0K1YKwRVI36CgRx                                       Liebestraume   \n",
-      "2  0P3TUNfXfhdJ4rgdZAUL6i   Ma vlast (My Fatherland): No. 2. Vltava (Moldau)   \n",
-      "3  3DNRdudZ2SstnDCVKFdXxG        Sonata No. 14 \"Moonlight\" in C-Sharp Minor\"   \n",
-      "4  4jW2s3Spp80QQwHxdefx88  Concerto No. 1 in G Minor for Violin and Orche...   \n",
+      "Songs head:\n",
+      "               spotify_id                          Song         Artist  Rank  \\\n",
+      "0  4H2TRR9FjnnIwxGnIt9stO                  Killin' Time    Clint Black     1   \n",
+      "1  6iy4PoAuZBMvtrlDX4VxC7               Check Yes Or No  George Strait     2   \n",
+      "2  3oW6SWwGqiZSPTiAp7ZQoH  It's A Great Day To Be Alive   Travis Tritt     3   \n",
+      "3  7lUE02KHkZM44BZgjCaWRO            Meet in the Middle    Diamond Rio     4   \n",
+      "4  1ecIqo8pOc8S6y3l80iGxd                         Fancy  Reba McEntire     5   \n",
       "\n",
-      "              Artist  Rank      Genre  \n",
-      "0  FrÃ©dÃ©ric Chopin     1  classical  \n",
-      "1                NaN     2  classical  \n",
-      "2   BedÅ™ich Smetana     3  classical  \n",
-      "3                NaN     4  classical  \n",
-      "4                NaN     5  classical  \n",
-      "   ID                 Name    Genre 1    Genre 2    Genre 3  \\\n",
-      "0   1           Sibyl Bode       rock        r&b        pop   \n",
-      "1   2    Eleazar Hettinger        rap  classical    hip hop   \n",
-      "2   3        Geovanny Lang        rap    country       soul   \n",
-      "3   4    Micah Satterfield       jazz        r&b  classical   \n",
-      "4   5  Courtney Schowalter  classical       folk      metal   \n",
-      "\n",
-      "               Artist 1     Artist 2           Artist 3  \n",
-      "0               Dae Dae     Ro James            Deicide  \n",
-      "1        Eliza Gilkyson  Trick Daddy  Bruce Springsteen  \n",
-      "2               K.A.R.D          SF9     Fischerspooner  \n",
-      "3  Fun Lovin' Criminals        Q-Tip        Soul Asylum  \n",
-      "4         Lorrie Morgan          Tcm          Wintersun  \n"
+      "     Genre  \n",
+      "0  country  \n",
+      "1  country  \n",
+      "2  country  \n",
+      "3  country  \n",
+      "4  country  \n",
+      "User head:\n",
+      "   ID  Password                 Name Genre 1  Genre 2  Genre 3\n",
+      "0   1         1           Sibyl Bode    rock      r&b      pop\n",
+      "1   2         2    Eleazar Hettinger     rap     soul  hip hop\n",
+      "2   3         3        Geovanny Lang     rap  country     soul\n",
+      "3   4         4    Micah Satterfield    jazz      r&b     soul\n",
+      "4   5         5  Courtney Schowalter    soul     folk    metal\n"
      ]
     }
    ],
    "source": [
+    "print(\"Songs head:\")\n",
     "print(songs.head())\n",
-    "print(user.head())"
+    "\n",
+    "print(\"User head:\")\n",
+    "print(user.head())\n",
+    "\n",
+    "print(\"History head:\")\n",
+    "print(history.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Job(id='60f9de80-9f58-4954-9e7c-584e1fda8669', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 26, 15, 22, 41, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='f6f52470dca241bbb96b6ff5d2649e4a', status='Indexing done.'), JobStatus(id='36fea923bf79437c86bd632a60267d92', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 3, 26, 15, 22, 45, tzinfo=TzInfo(UTC)), duration='4s', duration_seconds=4.0)"
+       "Job(id='a4acb695-132b-46ea-bbdf-1bb013d5b433', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 28, 3, 10, 49, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='f6f52470dca241bbb96b6ff5d2649e4a', status='Indexing done.'), JobStatus(id='36fea923bf79437c86bd632a60267d92', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 3, 28, 3, 10, 53, tzinfo=TzInfo(UTC)), duration='4s', duration_seconds=4.0)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,42 +97,41 @@
     "    api_key='sk-ms7SU43E34tS9UJks5RD2KM3m1JumOR2pM73Dk95VzKjM6TZ',\n",
     ")\n",
     "\n",
-    "# # Chat with LLM\n",
-    "# chat_session_id = client.create_chat_session()\n",
-    "# with client.connect(chat_session_id) as session:\n",
-    "#     # Simple Question for Document Collection\n",
-    "#     answer = session.query(\n",
-    "#         \"Can you hallucinate?\",\n",
-    "#     ).content\n",
-    "#     print(answer)\n",
-    "\n",
     "# Create Collection\n",
     "collection_id = client.create_collection(\n",
-    "    name=\"My first h2oGPTe collection\",\n",
-    "    description=\"PDF -> text -> summary\",\n",
+    "    name=\"Musicrecco\",\n",
+    "    description=\"Music Reccomendation Chatbot\",\n",
     ")\n",
     "\n",
-    "import os\n",
+    "# Upload Files\n",
+    "songs_path = '../data/songs_short.xlsx'\n",
+    "user_path = '../data/user.xlsx'\n",
+    "history_path = '../data/listening history.xlsx'\n",
     "\n",
-    "# Your existing code\n",
-    "file_path = \"/Users/blabbyduck/Downloads/user.pdf\"\n",
-    "with open(file_path, \"rb\") as f:\n",
-    "    upload_id = client.upload(os.path.basename(file_path), f)\n",
     "\n",
-    "# # Converting the input into chunked text and embeddings...\n",
-    "client.ingest_uploads(collection_id, [upload_id])"
+    "with open(songs_path, \"rb\") as f:\n",
+    "    songs_id = client.upload(os.path.basename(songs_path),f)\n",
+    "client.ingest_uploads(collection_id, [songs_id])\n",
+    "\n",
+    "with open(user_path, \"rb\") as f:\n",
+    "    user_id = client.upload(os.path.basename(user_path),f)\n",
+    "client.ingest_uploads(collection_id, [user_id])\n",
+    "\n",
+    "with open(history_path, \"rb\") as f:\n",
+    "    history_id = client.upload(os.path.basename(history_path),f)\n",
+    "client.ingest_uploads(collection_id, [history_id])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The last ID genre in the document is for ID 50, Antonio Lebsack, and it is k-pop.\n"
+      "Based on the information provided, the top ID in users is 1 (Sibyl Bode) and the top ID in songs is not explicitly stated in the given text. However, the song with the earliest position in the list is \"Killin' Time\" by George Jones, which has a position of 1.\n"
      ]
     }
    ],
@@ -138,7 +140,7 @@
     "with client.connect(chat_session_id) as session:\n",
     "    # Simple Question for Document Collection\n",
     "        answer = session.query(\n",
-    "        message=\"what is the last ID genre\",\n",
+    "        message=\"what is the top id in users and top id in songs\",\n",
     "        rag_config={\n",
     "            \"rag_type\": \"rag\",\n",
     "        },\n",
@@ -187,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
