login + sign up done

--- a/model/recc.ipynb
+++ b/model/recc.ipynb
@@ -111,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Job(id='471d2977-9d64-4e07-bc4c-3f73a96eb212', name='Adding documents', passed=0.0, failed=0.0, progress=0.0, completed=False, canceled=True, date=datetime.datetime(2024, 3, 28, 4, 51, 47, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[], errors=[], last_update_date=datetime.datetime(2024, 3, 28, 4, 52, 1, tzinfo=TzInfo(UTC)), duration='...', duration_seconds=0.0)"
+       "Job(id='84d588ba-de66-45a1-a53b-cc981048ff34', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 28, 5, 48, 30, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='36fea923bf79437c86bd632a60267d92', status='Indexing done.'), JobStatus(id='f6f52470dca241bbb96b6ff5d2649e4a', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 3, 28, 5, 48, 35, tzinfo=TzInfo(UTC)), duration='5s', duration_seconds=5.0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +136,11 @@
     "    name=\"Musicrecco\",\n",
     "    description=\"Music Reccomendation Chatbot\",\n",
     ")\n",
+    "\n",
+    "# Save HTML tables to files\n",
+    "songs_path = '../data/archive/songs_short.xlsx'\n",
+    "user_path = '../data/archive/user.xlsx'\n",
+    "history_path = '../data/archive/listening history.xlsx'\n",
     "\n",
     "# Open files for h2o\n",
     "with open(songs_path, \"rb\") as f:\n",
@@ -153,19 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SessionError",
-     "evalue": "Remote error: No document chunks found. Please ingest documents or disable RAG.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSessionError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m chat_session_id \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mcreate_chat_session(collection_id)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m client\u001b[38;5;241m.\u001b[39mconnect(chat_session_id) \u001b[38;5;28;01mas\u001b[39;00m session:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# Simple Question for Document Collection\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m         answer \u001b[38;5;241m=\u001b[39m \u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmessage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mwhat is the top id in users and top id in songs\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrag_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrag_type\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrag\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mcontent\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(answer)\n",
-      "File \u001b[1;32mc:\\Users\\Jiaying\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\h2ogpte\\session.py:317\u001b[0m, in \u001b[0;36mSession.query\u001b[1;34m(self, message, system_prompt, pre_prompt_query, prompt_query, pre_prompt_summary, prompt_summary, llm, llm_args, self_reflection_config, rag_config, timeout, callback)\u001b[0m\n\u001b[0;32m    312\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    313\u001b[0m                 res\u001b[38;5;241m.\u001b[39msession_id \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_chat_session_id\n\u001b[0;32m    314\u001b[0m                 \u001b[38;5;129;01mor\u001b[39;00m res\u001b[38;5;241m.\u001b[39mreply_to_id \u001b[38;5;241m!=\u001b[39m request_id\n\u001b[0;32m    315\u001b[0m             ):\n\u001b[0;32m    316\u001b[0m                 \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m--> 317\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m SessionError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRemote error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mres\u001b[38;5;241m.\u001b[39merror\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    318\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    319\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRequest timed out:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mserialize(request)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
-      "\u001b[1;31mSessionError\u001b[0m: Remote error: No document chunks found. Please ingest documents or disable RAG."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the information provided, the top ID in users is \"1\" with 4 rock genre listens, and the top ID in songs is \"2aoo2jlRnM3A0NyLQqMN2f\" with 4 rock genre listens.\n"
      ]
     }
    ],
