--- a/model/recc.ipynb
+++ b/model/recc.ipynb
@@ -2,107 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "songs = pd.read_csv('../data/songs_short.csv')\n",
-    "user = pd.read_csv('../data/user.csv')\n",
-    "history = pd.read_csv('../data/listening history.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Songs head:\n",
-      "               spotify_id                          Song         Artist  Rank  \\\n",
-      "0  4H2TRR9FjnnIwxGnIt9stO                  Killin' Time    Clint Black     1   \n",
-      "1  6iy4PoAuZBMvtrlDX4VxC7               Check Yes Or No  George Strait     2   \n",
-      "2  3oW6SWwGqiZSPTiAp7ZQoH  It's A Great Day To Be Alive   Travis Tritt     3   \n",
-      "3  7lUE02KHkZM44BZgjCaWRO            Meet in the Middle    Diamond Rio     4   \n",
-      "4  1ecIqo8pOc8S6y3l80iGxd                         Fancy  Reba McEntire     5   \n",
-      "\n",
-      "     Genre  \n",
-      "0  country  \n",
-      "1  country  \n",
-      "2  country  \n",
-      "3  country  \n",
-      "4  country  \n",
-      "User head:\n",
-      "   ID  Password                 Name Genre 1  Genre 2  Genre 3\n",
-      "0   1         1           Sibyl Bode    rock      r&b      pop\n",
-      "1   2         2    Eleazar Hettinger     rap     soul  hip hop\n",
-      "2   3         3        Geovanny Lang     rap  country     soul\n",
-      "3   4         4    Micah Satterfield    jazz      r&b     soul\n",
-      "4   5         5  Courtney Schowalter    soul     folk    metal\n",
-      "History head:\n",
-      "   User              spotify_id  Number of Times  Genre\n",
-      "0   1.0  2aoo2jlRnM3A0NyLQqMN2f               4.0  rock\n",
-      "1   1.0  31t0ATifZW5CW3XP2QUsUW              10.0   pop\n",
-      "2   1.0  1hGy2eLcmC8eKx7qr1tOqx              20.0   pop\n",
-      "3   1.0  6TlRNJaezOdzdECnQeRuMM              19.0   r&b\n",
-      "4   1.0  5d4l67BejhQZ9uQtTCfYfL               4.0   r&b\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Songs head:\")\n",
-    "print(songs.head())\n",
-    "\n",
-    "print(\"User head:\")\n",
-    "print(user.head())\n",
-    "\n",
-    "print(\"History head:\")\n",
-    "print(history.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert DataFrames to HTML tables for h2o to read\n",
-    "songs_html = songs.to_html(index=False)\n",
-    "user_html = user.to_html(index=False)\n",
-    "history_html = history.to_html(index=False)\n",
-    "\n",
-    "# Save HTML tables to files\n",
-    "songs_path = '../data/songs_short.html'\n",
-    "user_path = '../data/user.html'\n",
-    "history_path = '../data/listening history.html'\n",
-    "\n",
-    "# Write HTML content to files\n",
-    "with open(songs_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(songs_html)\n",
-    "\n",
-    "with open(user_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(user_html)\n",
-    "\n",
-    "with open(history_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(history_html)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Job(id='84d588ba-de66-45a1-a53b-cc981048ff34', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 28, 5, 48, 30, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='36fea923bf79437c86bd632a60267d92', status='Indexing done.'), JobStatus(id='f6f52470dca241bbb96b6ff5d2649e4a', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 3, 28, 5, 48, 35, tzinfo=TzInfo(UTC)), duration='5s', duration_seconds=5.0)"
+       "Job(id='6f889932-3ff9-46f9-a972-1dd98a7b9fb6', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 28, 9, 9, 12, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='36fea923bf79437c86bd632a60267d92', status='Indexing done.')], errors=[], last_update_date=datetime.datetime(2024, 3, 28, 9, 13, 29, tzinfo=TzInfo(UTC)), duration='4m17s', duration_seconds=257.0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,41 +31,63 @@
     "    api_key='sk-ms7SU43E34tS9UJks5RD2KM3m1JumOR2pM73Dk95VzKjM6TZ',\n",
     ")\n",
     "\n",
+    "# # Chat with LLM\n",
+    "# chat_session_id = client.create_chat_session()\n",
+    "# with client.connect(chat_session_id) as session:\n",
+    "#     # Simple Question for Document Collection\n",
+    "#     answer = session.query(\n",
+    "#         \"Can you hallucinate?\",\n",
+    "#     ).content\n",
+    "#     print(answer)\n",
+    "\n",
     "# Create Collection\n",
     "collection_id = client.create_collection(\n",
-    "    name=\"Musicrecco\",\n",
-    "    description=\"Music Reccomendation Chatbot\",\n",
+    "    name=\"MusicRecco\",\n",
+    "    description=\"PDF -> text -> summary\",\n",
     ")\n",
     "\n",
-    "# Save HTML tables to files\n",
-    "songs_path = '../data/archive/songs_short.xlsx'\n",
-    "user_path = '../data/archive/user.xlsx'\n",
-    "history_path = '../data/archive/listening history.xlsx'\n",
+    "import os\n",
     "\n",
-    "# Open files for h2o\n",
-    "with open(songs_path, \"rb\") as f:\n",
-    "    songs_id = client.upload(os.path.basename(songs_path),f)\n",
-    "client.ingest_uploads(collection_id, [songs_id])\n",
+    "# Your existing code\n",
+    "file_path = \"/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/Cutdown.xlsx\"\n",
+    "with open(file_path, \"rb\") as f:\n",
+    "     songs = client.upload(os.path.basename(file_path), f)\n",
     "\n",
-    "with open(user_path, \"rb\") as f:\n",
-    "    user_id = client.upload(os.path.basename(user_path),f)\n",
-    "client.ingest_uploads(collection_id, [user_id])\n",
+    "file_path1 = \"/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/listening history.xlsx\"\n",
+    "with open(file_path1, \"rb\") as f:\n",
+    "     user = client.upload(os.path.basename(file_path1), f)\n",
     "\n",
-    "with open(history_path, \"rb\") as f:\n",
-    "    history_id = client.upload(os.path.basename(history_path),f)\n",
-    "client.ingest_uploads(collection_id, [history_id])"
+    "# with open('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/listening history.xlsx', 'rb') as f:\n",
+    "#     hist = client.upload(os.path.basename('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/listening history.xlsx'), f)\n",
+    "\n",
+    "# with open('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/songs_short.xlsx', 'rb') as f:\n",
+    "#     songs = client.upload(os.path.basename('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/songs_short.xlsx'), f)\n",
+    "\n",
+    "#with open('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/music.csv', 'rb') as f:\n",
+    "#    spot = client.upload(os.path.basename('/Users/blabbyduck/Desktop/Y3S2/DSA4213/LLMasters/data/music.csv'), f)\n",
+    "\n",
+    "# # Converting the input into chunked text and embeddings...\n",
+    "client.ingest_uploads(collection_id, [songs,user])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the information provided, the top ID in users is \"1\" with 4 rock genre listens, and the top ID in songs is \"2aoo2jlRnM3A0NyLQqMN2f\" with 4 rock genre listens.\n"
+      "Based on the information provided, you have listened to \"All Along the Watchtower\" by Jimi Hendrix, which is a classic rock song. Here are some similar songs that you might enjoy:\n",
+      "\n",
+      "1. \"Stairway to Heaven\" by Led Zeppelin\n",
+      "2. \"More Than a Feeling\" by Boston\n",
+      "3. \"Hotel California\" by The Eagles\n",
+      "4. \"Sweet Home Alabama\" by Lynyrd Skynyrd\n",
+      "5. \"Born to Be Wild\" by Steppenwolf\n",
+      "\n",
+      "These songs are all considered classics in the rock genre and have a similar sound and feel to \"All Along the Watchtower.\"\n"
      ]
     }
    ],
@@ -174,7 +96,8 @@
     "with client.connect(chat_session_id) as session:\n",
     "    # Simple Question for Document Collection\n",
     "        answer = session.query(\n",
-    "        message=\"what is the top id in users and top id in songs\",\n",
+    "        message=\"I am user 1. Reccomend me songs similar to my taste\",\n",
+    "        system_prompt = 'Assume music and song to be the same word. When a question as for a similar music, recommend less than 5 music unless told otherwise. Find similar music based on genre and other factors such as danceability, loudness, speechiness and more. Just return the song name, unless stated otherwise.' ,\n",
     "        rag_config={\n",
     "            \"rag_type\": \"rag\",\n",
     "        },\n",
@@ -187,6 +110,50 @@
    "metadata": {},
    "source": [
     "Prompt designs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mistralai/Mixtral-8x7B-Instruct-v0.1', 'h2oai/h2ogpt-4096-llama2-70b-chat', 'h2oai/h2ogpt-4096-llama2-13b-chat', 'h2oai/h2ogpt-32k-codellama-34b-instruct', 'HuggingFaceH4/zephyr-7b-beta', 'NousResearch/Nous-Capybara-34B', 'claude-2.1', 'gpt-3.5-turbo-0613', 'gpt-3.5-turbo-16k-0613', 'gpt-35-turbo-1106', 'gpt-4-1106-preview', 'gemini-pro', 'mistral-small-latest', 'mistral-large-latest', 'mistral-medium']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([x[\"base_model\"] for x in client.get_llms()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of chunks: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inspect and collect all text chunks\n",
+    "chunks = []\n",
+    "for chunk_id in range(1, 100):\n",
+    "    try:\n",
+    "        chunk = client.get_chunks(collection_id, [chunk_id])\n",
+    "        print(chunk, flush=True)\n",
+    "        chunks.append(chunk[0].text)\n",
+    "    except:\n",
+    "        break\n",
+    "\n",
+    "print(f\"Number of chunks: {len(chunks)}\", flush=True)"
    ]
   },
   {
@@ -223,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
