lucia test this thisif you trying prompt only

--- a/archive/archive_model/model_basic.ipynb
+++ b/archive/archive_model/model_basic.ipynb
@@ -32,9 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "songs = pd.read_csv('../data/songs_short.csv')\n",
-    "user = pd.read_csv('../data/user.csv')\n",
-    "history = pd.read_csv('../data/listening history.csv')"
+    "songs = pd.read_csv('../../data/songs_short.csv')\n",
+    "user = pd.read_csv('../../data/user.csv')\n",
+    "history = pd.read_csv('../../data/listening history.csv')"
    ]
   },
   {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
