--- a/archive/archive_model/model_basic.ipynb
+++ b/archive/archive_model/model_basic.ipynb
@@ -28,18 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "songs = pd.read_csv('../../data/songs_short.csv')\n",
     "user = pd.read_csv('../../data/user.csv')\n",
-    "history = pd.read_csv('../../data/listening history.csv')"
+    "history = pd.read_csv('../../data/listening_history.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,19 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = H2OGPTE(\n",
     "    address='https://h2ogpte.genai.h2o.ai',\n",
-    "    api_key='sk-985GNVY6C2hOrmixYxL9uJ9DtpLZFrNb42NmPAf5TN4WXXgu',\n",
+    "    api_key='sk-cfLVheKJ5GJMA7oEJoPKXPOul4aWtCk9fnMD0BiYBYjaH53J',\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Job(id='908aff7d-eb7c-4732-8cf2-99d990d1bd9f', name='Adding documents', passed=0.8571428571428571, failed=0.14285714285714285, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 3, 31, 12, 54, 57, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='11beed69784441a39f2df02f0c3397c7', status='Indexing done.'), JobStatus(id='9e21acfab9f44dd386a0106f2766b55b', status='Indexing done.')], errors=['Job crashed: [Errno 503] Not Ready or Lagging'], last_update_date=datetime.datetime(2024, 3, 31, 12, 55, 23, tzinfo=TzInfo(UTC)), duration='26s', duration_seconds=26.0)"
+       "Job(id='782b4a5a-0694-4230-92f6-85033c866317', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 4, 7, 4, 18, 10, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='a3624524b3444461893c715976f10ce6', status='Indexing done.'), JobStatus(id='eb7cc35f5c284ae38b2df4a30a90d0ae', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 4, 7, 4, 18, 32, tzinfo=TzInfo(UTC)), duration='22s', duration_seconds=22.0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,34 +186,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Recommend less than 5 music unless told otherwise. Return only the song name, unless stated otherwise. Return spotify_id of each recommended music at the end of each recomendation'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spot_extraction(msg):\n",
+    "    with client.connect(chat_session_id) as session:\n",
+    "        # Simple Question for Document Collection\n",
+    "            answer = session.query(\n",
+    "            message= msg,\n",
+    "            system_prompt ='Recommend not more than 5 music. Return spotify_id at the end of each song.',\n",
+    "            rag_config={\n",
+    "                \"rag_type\": \"rag\",\n",
+    "            },\n",
+    "            ).content\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on your user information, you enjoy rock, r&b, and pop music. Here are some song recommendations for you:\n",
+      "Here are five songs that you might find comforting when you're feeling down, based on the information provided in the document:\n",
       "\n",
-      "1. \"Bohemian Rhapsody\" by Queen (rock)\n",
-      "2. \"Purple Rain\" by Prince (r&b/pop)\n",
-      "3. \"Mr. Brightside\" by The Killers (rock/pop)\n",
-      "4. \"I Want it That Way\" by Backstreet Boys (pop)\n",
-      "5. \"No Scrubs\" by TLC (r&b)\n"
+      "1. \"Yesterday\" by The Beatles (page 17, row 1) - Spotify ID: 6FRwDxXsvSasw0y2eDArsz\n",
+      "2. \"The Sound of Silence\" by Simon & Garfunkel (page 18, row 2) - Spotify ID: 5uvosCdMlFdTXhoazkTI5R\n",
+      "3. \"Imagine\" by John Lennon (page 19, row 1) - Spotify ID: 6mHOcVtsHLMuesJkswc0GZ\n",
+      "4. \"Hallelujah\" by Leonard Cohen (page 20, row 2) - Spotify ID: 0sgDEFq9oeC8ueOK0mR5IA\n",
+      "5. \"Someone Like You\" by Adele (page 20, row 3) - Spotify ID: 4KfSdst7rW39C0sfhArdrz\n",
+      "\n",
+      "Please note that these songs were chosen based on their genre (rock and soul) and the fact that they have been recognized as emotionally evocative by some listeners. However, everyone's musical tastes and emotional responses are different, so these songs may not have the same effect on you as they have on others.\n"
      ]
     }
    ],
    "source": [
-    "with client.connect(chat_session_id) as session:\n",
-    "    # Simple Question for Document Collection\n",
-    "        answer = session.query(\n",
-    "        message=\"I am user sibyl. Reccomend me songs similar to my taste\",\n",
-    "        system_prompt = 'Assume music and song to be the same word. When a question as for a similar music, recommend less than 5 music unless told otherwise. Find similar music based on genre and other factors such as danceability, loudness, speechiness and more. Just return the song name, unless stated otherwise.' ,\n",
-    "        rag_config={\n",
-    "            \"rag_type\": \"rag\",\n",
-    "        },\n",
-    "        ).content\n",
-    "        print(answer)\n"
+    "ans = spot_extraction(\"What are some music that i can listen to when im sad\")\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the data provided, here are five songs from different artists that I recommend:\n",
+      "\n",
+      "1. \"Light My Fire\" by The Doors (spotify\\_id: 5uvosCdMlFdTXhoazkTI5R)\n",
+      "2. \"The Logical Song - 2010 Remastered\" by Supertramp (spotify\\_id: 6mHOcVtsHLMuesJkswc0GZ)\n",
+      "3. \"Barracuda\" by Heart (spotify\\_id: 4KfSdst7rW39C0sfhArdrz)\n",
+      "4. \"Like a Stone\" by Audioslave (spotify\\_id: 3YuaBvuZqcwN3CEAyyoaei)\n",
+      "5. \"Back In Black\" by AC/DC (spotify\\_id: 08mG3Y1vljYA6bvDt4Wqkj)\n",
+      "\n",
+      "These songs are from well-known rock bands and have high popularity scores according to the data.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans1 = spot_extraction(\"What are some music that you recommend me\")\n",
+    "print(ans1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_link(text):\n",
+    "    lines = text.split('\\n')\n",
+    "    lines = [line.strip() for line in lines if line.strip()]\n",
+    "    spotify_id_pattern = r'spotify\\\\_id: ([a-zA-Z0-9]+)'\n",
+    "    # Extracting Spotify IDs\n",
+    "    spotify_ids = []\n",
+    "    for line in lines:\n",
+    "        match = re.search(spotify_id_pattern, line)\n",
+    "        if match:\n",
+    "            spotify_ids.append(match.group(1))\n",
+    "\n",
+    "    #output clickable links\n",
+    "    for idx, spotify_id in enumerate(spotify_ids, start=1):\n",
+    "        link = f\"https://open.spotify.com/track/{spotify_id}\"\n",
+    "        print(f\"{link}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://open.spotify.com/track/5uvosCdMlFdTXhoazkTI5R\n",
+      "https://open.spotify.com/track/6mHOcVtsHLMuesJkswc0GZ\n",
+      "https://open.spotify.com/track/4KfSdst7rW39C0sfhArdrz\n",
+      "https://open.spotify.com/track/3YuaBvuZqcwN3CEAyyoaei\n",
+      "https://open.spotify.com/track/08mG3Y1vljYA6bvDt4Wqkj\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_link(ans1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. 5uvosCdMlFdTXhoazkTI5R\n",
+      "2. 6mHOcVtsHLMuesJkswc0GZ\n",
+      "3. 4KfSdst7rW39C0sfhArdrz\n",
+      "4. 3YuaBvuZqcwN3CEAyyoaei\n",
+      "5. 08mG3Y1vljYA6bvDt4Wqkj\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to convert Spotify IDs to clickable links\n",
+    "def spotify_id_to_link(spotify_id):\n",
+    "    return f\"https://open.spotify.com/track/{spotify_id}\"\n",
+    "\n",
+    "# Output the clickable links\n",
+    "for idx, spotify_id in enumerate(\"spotify_ids\", start=1):\n",
+    "    link = spotify_id_to_link(spotify_id)\n",
+    "    print(f\"{idx}. {link}\")\n"
    ]
   }
  ],
@@ -224,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
